@@ -1,5 +1,5 @@
 ==========================
-README for Bazaar 0.17-dev
+README for Bazaar 0.18-dev
 ==========================
 
 Bazaar is a decentralized revision control system, designed to be easy
