@@ -220,16 +220,6 @@ class TestLockDir(TestCaseWithTransport):
         One thread holds on a lock and then releases it; another 
         tries to lock it.
         """
-        # This test sometimes fails like this:
-        # Traceback (most recent call last):
-
-        #   File "/home/pqm/bzr-pqm-workdir/home/+trunk/bzrlib/tests/
-        # test_lockdir.py", line 247, in test_32_lock_wait_succeed
-        #     self.assertEqual(1, len(self._logged_reports))
-        # AssertionError: not equal:
-        # a = 1
-        # b = 0
-        raise tests.TestSkipped("Test fails intermittently")
         t = self.get_transport()
         lf1 = LockDir(t, 'test_lock')
         lf1.create()
